2000-09-13  Lauris Kaplinski  <lauris@helixcode.com>

	* desktop-snap.c, desktop-snap.h (sp_desktop_horizontal_snap):
	Implemented
	(sp_desktop_vertical_snap): Ditto
	(sp_desktop_free_snap): Rewrote, using horiz. and vert. snapping
	(sp-desktop_vector_snap): Implemented

	* rect-context.c, rect-context.h: Rewrote event handling stuff,
	so it now supports (hopefully) all snapping chemistry

	* sp-namedview.c (sp_namedview_build, sp_namedview_read_arg):
	Implemented arguments "snaptoguides" and "guidetolerance"

	* sp-rect.c (sp_rect_set_arg): Implemented Gtk+ argument setting

	* ellipse-context.c, ellipse-context.h: Ditto

2000-09-12  Lauris Kaplinski  <lauris@helixcode.com>

	* src/*.c, glade/desktop.*, src/dialog/desktop-properties.*:
	Hacked together a preliminary guideline support stuff.	It
	sucks really for anything other than scaling, but now we have
	at least something to improve in future.

2000-09-09  Lauris Kaplinski  <lauris@helixcode.com>

	* sodipodi.c, sodipodi-private.h: New filed. Bye-bye to
	Gnome-MDI interface, instead we have much more convenient
	sodipodi object.
	This introduced many changes mostly everywhere.

	* src/helper/gt1*, src/helper/parseAFM.*: removed gt1 library,
	as it is now accessible through gnome-print

	* Makefile.am, src/Makefile.am, glade/Makefile.am: We'll pass
	'make distcheck' again

	* src/sp-item-group.c: Children update, if parent's style is
	changed

2000-09-06  Lauris Kaplinski  <lauris@helixcode.com>

	* glade/*: Added Frank Felfe new icons and toolbopx stuff

	* src/toolbox.*: Toolbox stuff (Frank Felfe)

	* src/sp-item-transform.*: Same

2000-08-24 Alastait McKinstry <mckinstry@computer.org>

	* configure.in: ALL_LINGUAS: added 'ga' for Irish translation.

2000-08-19  Lauris Kaplinski  <lauris@helixcode.com>

	* glade/transformation.glade: Transformation dialog (Frank Felfe)

	* src/dilaogs/transfomration.*: Transfomration dialog (Frank Felfe)

	* src/mdi-ui.c: Added transformation dialog
